--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    font-family: 'Oswald', sans-serif;
  }
  
  nav {
@@ -37,8 +38,6 @@ body {
 }
 
  footer {
-    width:100%;
-    height: 100px;
     background-color: #333;
     position: absolute;
  }
